--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,37 +5,39 @@
 }
 body{
     background-color: rgb(223, 148, 223);
-    font-size: 30px;
 }
 #nav-bar{
     padding: 15px;
-    margin: 30px;
     position: sticky;
     color: rgb(64, 48, 136);
-    /* border: 2px solid white; */
-    background-color: black;
-    /* border-radius: 10px; */
-   
-    /* width: 100px; */
-    /* display: flex; */
-    /* flex-direction: column; */
+    background-color: rgb(95, 88, 88);
 }
 .space{
-    height:100vh;
+    height:70vh;
 }
 #nav-bar a{
     text-decoration: none;  
     cursor: pointer;
+    color: white;
     
 }
 a:active{
     color: green;
 }
 
-img{
-    size:100px;
-    border-radius: 40%;
-}
 #mimipicture{
-    max-width: 200px;
+    display: flex;
+    flex-direction: column;
+}
+#mimipicture img{
+    /* max-width: 200px; */
+    width: 200px;
+    border-radius: 50%;
+    margin-right: 15px;
+
+
+}
+
+footer{
+    background: turquoise;
 }
