--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,40 +4,134 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(223, 148, 223);
-}
-#nav-bar{
-    padding: 15px;
-    position: sticky;
-    color: rgb(64, 48, 136);
-    background-color: rgb(95, 88, 88);
+    background-color: white
 }
 .space{
-    height:70vh;
+    min-height:100vh;
 }
-#nav-bar a{
+a{
     text-decoration: none;  
     cursor: pointer;
-    color: white;
+    color: rgb(223, 148, 223);
     
 }
 a:active{
     color: green;
 }
+.movey{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
 
-#mimipicture{
+
+
+/* header********************* */
+
+#welcome{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    margin-top: 200px;
+    max-width: 700px;
+    /* background: url(/media/lookcode.jpg);
+    background-size: auto; */
+    
+}
+#welcome img{
+    
+    width: 150px;
+    height: 200px;
+    border-radius: 50%;
+    margin-right: 15vh;
+    border: rgb(223, 148, 223) 5px solid;
+}
+#inform{
+    margin-top: 60px;
+}
+/* nav************************************ */
+
+nav{
+    position: relative;
+}
+#nav-bar{
+    padding: 15px;
+    position: sticky;
+    top: 0px;
+    color: rgb(64, 48, 136);
+    background-color: rgb(95, 88, 88);
+    display: flex;
+    justify-content: space-around;
+}
+/* section*************** */
+/* about******* */
+/* contact********** */
+
+form{
+    border: rgb(223, 148, 223) 5px solid;
+    max-width: 400px;
+    max-height: 500px;
+    align-self: center;
+    /* text-align: center; */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+}
+
+.bala{
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+/* project******** */
+#project{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    
 }
-#mimipicture img{
-    /* max-width: 200px; */
-    width: 200px;
-    border-radius: 50%;
-    margin-right: 15px;
-
+#project-box{
+    display: flex;
+    width: 100%;
+    height: 600px;
+    align-content: center;
 
 }
+#project a{
+    color: black;
+}
 
+#project img{
+    max-width: 300px;
+    height: 500px;
+    border: tomato 3px solid;
+}
+
+#linky{
+    align-self: center;
+}
+/* footer********************** */
 footer{
     background: turquoise;
+    height: 10vh;
+    text-align: center;
 }
+.fas{
+    width:100px ;
+    border-radius: 50%;
+    margin-right: 10px;
+    color: rgb(223, 148, 223);;
+}
+@media screen and (max-width: 700px) {
+    #welcome{
+            display: block;
+    }
+    #project-box{
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+    }
+    #project img{
+        width: fit-content;
+    }
+      
+  }
