--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    background-color: white
+    background-color: white;
+    /* align-content: center; */
 }
 .space{
     min-height:100vh;
@@ -28,27 +29,48 @@ a:active{
 
 /* header********************* */
 
-#welcome{
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    margin-top: 200px;
-    max-width: 700px;
-    /* background: url(/media/lookcode.jpg);
-    background-size: auto; */
-    
-}
-#welcome img{
-    
-    width: 150px;
-    height: 200px;
-    border-radius: 50%;
-    margin-right: 15vh;
-    border: rgb(223, 148, 223) 5px solid;
-}
-#inform{
-    margin-top: 60px;
-}
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #nav-bar {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
 /* nav************************************ */
 
 nav{
@@ -63,6 +85,33 @@ nav{
     display: flex;
     justify-content: space-around;
 }
+
+    
+#home img{
+    
+    width: 150px;
+    height: 200px;
+    border-radius: 50%;
+    margin-right: 15vh;
+    border: rgb(223, 148, 223) 5px solid;
+}
+#inform{
+    margin-top: 60px;
+}
+
+#inform h1{
+    color: chartreuse;
+    text-shadow: 0.4rem 0.3rem 0.7rem steelblue;
+}
+
+#inform h2{
+    color: chartreuse;
+    /* text-shadow: 0.4rem 0.3rem 0.7rem steelblue; */
+}
+
+
+
+
 /* section*************** */
 /* about******* */
 /* contact********** */
@@ -72,16 +121,85 @@ form{
     max-width: 400px;
     max-height: 500px;
     align-self: center;
-    /* text-align: center; */
+    text-align: center;
     /* display: flex;
     flex-direction: column;
     justify-content: center; */
+
+
+   
 }
+/* #catchy{
+    border: rgb(223, 148, 223) 5px solid;
+    width: 100px;
+    height: 100px;
+    animation-name: animacule;
+    animation: animacule 5s forwards 1s ease-in-out;
+}
+@keyframes animacule{
+    25%{
+        top: 0;
+        left: 300px;
+    }
+    50%{
+        top: 300px;
+        left: 300px;
+    }
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .bala{
     margin-bottom: 15px;
     margin-top: 15px;
 }
+#submit-me{
+    width: 100px;
+    height: 100px;
+    transition-property: background;
+    transition-duration: 2s;
+    transition-timing-function: ease-in-out;
+    /* transition-delay: 3s; */
+}
+#submit-me:hover{
+    background: blue;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* project******** */
 #project{
     display: flex;
