--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,16 @@
 }
 body{
     background-color: white;
-    /* align-content: center; */
+    position: relative;
+    margin: auto;
+}
+#top-stick{
+    position: sticky;
+    left: 100%;
+    top: 300px;
+    border: 3px green solid;
+    background: peru;
+    padding: 20px;
 }
 .space{
     min-height:100vh;
@@ -26,67 +35,37 @@ a:active{
 }
 
 
+.icon{
+    display: none;
+}
 
 /* header********************* */
 
-/* Style the navigation menu */
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-  }
-  
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #nav-bar {
-    display: none;
-  }
-  
-  /* Style navigation menu links */
-  .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
-  
-  /* Style the hamburger menu */
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active link (or home/logo) */
-  .active {
-    background-color: #04AA6D;
-    color: white;
-  }
 
 /* nav************************************ */
 
-nav{
+.topnav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(64, 48, 136);
+    background-color: rgb(95, 88, 88);
+    padding: 15px;
     position: relative;
 }
 #nav-bar{
-    padding: 15px;
     position: sticky;
     top: 0px;
-    color: rgb(64, 48, 136);
-    background-color: rgb(95, 88, 88);
-    display: flex;
-    justify-content: space-around;
+    
 }
 
-    
+   /*****************************section*************** */
+
+
+/* about******* */ 
+#home{
+    margin: auto;
+}
 #home img{
     
     width: 150px;
@@ -104,16 +83,8 @@ nav{
     text-shadow: 0.4rem 0.3rem 0.7rem steelblue;
 }
 
-#inform h2{
-    color: chartreuse;
-    /* text-shadow: 0.4rem 0.3rem 0.7rem steelblue; */
-}
 
 
-
-
-/* section*************** */
-/* about******* */
 /* contact********** */
 
 form{
@@ -122,47 +93,8 @@ form{
     max-height: 500px;
     align-self: center;
     text-align: center;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
 
-
-   
 }
-/* #catchy{
-    border: rgb(223, 148, 223) 5px solid;
-    width: 100px;
-    height: 100px;
-    animation-name: animacule;
-    animation: animacule 5s forwards 1s ease-in-out;
-}
-@keyframes animacule{
-    25%{
-        top: 0;
-        left: 300px;
-    }
-    50%{
-        top: 300px;
-        left: 300px;
-    }
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .bala{
@@ -181,25 +113,24 @@ form{
     background: blue;
     border-radius: 50%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*************moments*****************/
+#moments img{
+    width: 400px;
+    height: 500px;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    /* background-color: #2196F3; */
+    padding: 10px;
+  }
+  .m {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
 /* project******** */
 #project{
     display: flex;
@@ -227,6 +158,8 @@ form{
 #linky{
     align-self: center;
 }
+
+
 /* footer********************** */
 footer{
     background: turquoise;
@@ -239,10 +172,12 @@ footer{
     margin-right: 10px;
     color: rgb(223, 148, 223);;
 }
+
+
+/* ******************MEDIA MEDIA********** */
+
+
 @media screen and (max-width: 700px) {
-    #welcome{
-            display: block;
-    }
     #project-box{
         display: flex;
         flex-direction: column;
@@ -251,5 +186,46 @@ footer{
     #project img{
         width: fit-content;
     }
-      
+    /* navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
   }
+  
+  /* Hide links inside the navigation menu  */
+  .topnav #nav-bar {
+    display: none;
+  }
+  
+  /* navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  /*  hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /*  active link  */
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+}
