--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,11 +116,16 @@ form{
 /*************moments*****************/
 #moments img{
     width: 400px;
-    height: 500px;
+    height: 600px;
+}
+#moments img .span{
+    width: 400px;
+    height: 200px;
 }
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
+    /* grid-template-rows: masonry; */
     /* background-color: #2196F3; */
     padding: 10px;
   }
@@ -128,8 +133,8 @@ form{
     /* background-color: rgba(255, 255, 255, 0.8); */
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
-    font-size: 30px;
-    text-align: center;
+    /* font-size: 30px; */
+    /* text-align: center; */
   }
 /* project******** */
 #project{
