--- a/media.css
+++ b/media.css
@@ -1,62 +1,104 @@
 @media screen and (max-width: 600px) {
-
-    /* *******nav media******* */
-    .navbar-toggle .toggle-button{
+    
+    .mynavbar{
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        color: rgb(64, 48, 136);
+        background-color: rgb(95, 88, 88);
+        padding: 1rem;
+        position: fixed;
     }
-    .navbar-links{
+    .mynavbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+    .topnav{
         display: none;
     }
-    .navbar{
-        flex-direction: column;
-        align-items: flex-start;
+    #navbar-links{
+        display: none;
     }
-
-    .navbar-links ul{
-        background-color: grey;
-        width: 100%;
+    /* *****************HOME*********************** */
+    #home{
         flex-direction: column;
-    }
-    .navbar-links li{
+        justify-self: center;
+        align-self: center;
         text-align: center;
     }
-    .navbar-links li a {
-        padding: 0.5rem 1rem ;
-    }
 
-    /* ****home media***** */
+    #home .header-image{
+        height: 200px;
+        width: 200px;
+        margin: 100px auto 0px auto
+    }
+    #home .header-image img{
+        width: 100%;
+        height: 100%;
+    }
     #home h1{
         font-size: 34px;
         margin-bottom: 4px;
     }
     .header-name{
-        padding: 1rem;
+        padding: 0.5rem;
     }
     .project-linky{
         width: 100px;
-        height: 30px;
+        /* height: 30px; */
         border-radius: 5px;
         border: none;
         background: rgb(223, 148, 223);
         color: black;
-        }
-        /* ********ABOUT************* */
-        #about{
-            height: auto;
-        }
-
-        /* *****MOMENTS****** */
-        /* .grid-container { */
-        .moments {
-            display: inline-grid;
-            grid-template-columns: auto;
-            /* width: 200px; */
-        }
-    
-        .grid-image {
-            width: 100px;
-            height: auto;
-
+    }
+    /* *******ABOUT************ */
+    #about{
+        height: auto;
+    }
+    .quality-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* text-align: center; */
     
     }
+    
+}
+
+
+@media screen and (max-width:600px){
+
+    #project-box{
+        grid-template-columns: 1fr;
+    }
+
+    #project{
+        border:none;
+    }
+}
+
+
+@media screen and (max-width:900px) and (min-width:599px){
+    #project-box{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .quality-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        justify-self: center;
+    }
+}
+
+
+@media screen and (min-width:1000px){
+    #home{
+        height:100vh;
+    }
+
+    .home-center{
+        flex-direction:row;
+    }
+
+
 }
