--- a/style.css
+++ b/style.css
@@ -9,13 +9,10 @@
 body{
     color: black;
     background-color: white;
-    /* -webkit-user-select: none; */
+    overflow-x: hidden !important;
+    
 }
 /* *******************GENERAL MARKET*********************************** */
-
-/* .space{
-    min-height:100vh;
-} */
 a{
     text-decoration: none;  
     cursor: pointer;
@@ -30,79 +27,61 @@ a{
       
 }
 
+
 /* *************NAV BAR & LOGO********************** */
-  .navbar{
-    background-color: grey;
-    padding: 1rem;
+
+.topnav{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    color: rgb(64, 48, 136);
+    background-color: rgb(95, 88, 88);
+    padding: 1rem;
     position: fixed;
     width: 100%;
-    color: white;
-    
-  }
-  .navbar-links ul{
-      display: flex;
-
-  }
-  .navbar-links li{
-      list-style: none;
-      
-  }
-
-  .navbar-links li a{
-    text-decoration: none;
-    /* color: white;
-    margin: 10px; */
-    padding: 2rem;
-  }
-
-  .icon{
+    /* display:none; */
+}
+.mynavbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: rgb(64, 48, 136);
+    background-color: rgb(95, 88, 88);
+    padding: 15px;
+    position: fixed;
+    width: 100%;
+}
+.mynavbar{
     display: none;
 }
-
-  /* .navbar-toggle .toggle-button{
-      width: 30px;
-      height: 20px;
-      position: absolute;
-      top: 0.75rem;
-      right: 1rem;
-      display: none;
-      flex-direction: column;
-      justify-content: space-between; 
+.active {
+    color: white;
   }
-
-  .toggle-button .bar{
-      height: 30px;
-      width: 100%;
-      background-color: white;
+  #myLinks a{
+     margin-right: 20px;
   }
-  span{
-      margin: 3px;
-  } */
-
-
 
   /* ***************HEADER HOME********************************** */
   #home{
-    display: flex;
-    width: 70vw;
-    height: 100vh;
-    margin: auto;
-    padding-top: 30vh;
-    justify-content: space-around;
-    align-content: center;
-    text-align: center;
-    /* border: rgb(223, 148, 223) 5px solid; */
-
+    background:rgba(255, 105, 180, 0.082);
+    display:flex;
+    align-items:center;
   }
+
+  .home-center{
+      width:80%;
+      margin:0 auto;
+      display:flex;
+      justify-content: space-between;
+      flex-direction:column;
+  }
+
   #home img{
-      width: 150px;
-      height: 200px;
-      border-radius: 50%;
-      border: rgb(223, 148, 223) 5px solid;
+      width: 350px;
+      height: 400px;
       box-shadow: none;
+      object-fit: cover;
   }
 
   #home h1{
@@ -111,8 +90,12 @@ a{
     font-size: 42px;
     margin-bottom: 7px;
   }
+
+
   .header-name{
       padding: 2rem;
+      display:flex;
+      align-items:center;
   }
 
   .project-linky{
@@ -123,6 +106,7 @@ a{
     border: none;
     background: rgb(223, 148, 223);
     color: black;
+    transition:all 0.3s ease-in-out;
     }
 
     .project-linky:hover{
@@ -132,27 +116,35 @@ a{
     }  
 /* *******************ABOUT AND SKILLS********************** */
 #about{
-    height: 100vh;
+    padding:50px 0 0 0;
+    /* display:none; */
 }
 .about-me{
     width: 70vw;
     margin: auto;
     padding-top: 15px;
   }
-    /* ************************QUALITIES************************** */
 
 
-
+/* ************************QUALITIES************************** */
 .quality-container{
     text-align: center;
     padding-bottom: 15px;
+    margin-top:50px;
+    padding:50px 0;
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap:1.5rem;
+    width:80%;
+    margin:0 auto;
+    /* display:none; */
 }
 .qualities{
     border: 3px solid black;
     max-width: 200px;
     height: 200px;
     padding: 15px;
-    display: inline-grid;
+
 }
 .fas{
     width:100px ;
@@ -161,29 +153,56 @@ a{
     color: rgb(223, 148, 223);;
 }
 
-/* ******************MOMENTS********************** */
-
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    /* grid-template-columns: repeat(3, 1fr); */
-    /* grid-template-rows: masonry; */
-}
-  .grid-image {
-    width: 400px;
-    height: auto;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 1px rgb(90 84 84 / 47%);
-    -webkit-box-shadow: 0 0 5px 1px rgb(90 84 84 / 47%);
-    -moz-box-shadow: 0 0 5px 1px rgba(90,84,84,.47);
-    object-fit: cover;
-  }
 /* ******************PROJECTS************************ */
 
+
 #project{
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding:50px 0;
 }
+
+#linky{
+    align-self: center;
+}
+#project-box{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:2rem;
+    width:80%;
+    margin:0 auto;
+
+}
+
+.projectbox{
+    height:400px;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+}
+
+.projectbox img{
+    width: 100%;
+    height: 90%;
+    /* background-color:rgb(223, 148, 223) ; */
+}
+
+.projectbox input[type=button]{
+    background:crimson;
+    padding:15px;
+    outline:none;
+    border:none;
+    width:100%;
+    color:white;
+    cursor:pointer;
+    transition:all 0.3s ease-in-out;
+}
+
+.projectbox input[type=button]:hover{
+    background:red;
+}
+
 
 /* *********************CONTACT ME********************* */
 
@@ -193,21 +212,21 @@ a{
     text-align: center;
     flex-direction: column;
     margin: auto;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    /* border: black 3px solid; */
+    
 }
 form{
-    border: rgb(223, 148, 223) 5px solid;
-    max-width: 400px;
-    max-height: 500px;
+    /* border: rgb(223, 148, 223) 5px solid; */
+    max-width: 40vh;
+    max-height: 50vh;
     align-self: center;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 35px;
     padding: 15px;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 2px 0px 5px 2px rgba(0,0,0,0.2);
+    /* -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75); */
     
 }
 
@@ -222,9 +241,10 @@ form{
     border: none;
     border-radius: 50%;
     transition-property: background;
-    transition-duration: 2s;
+    transition-duration: 1s;
     transition-timing-function: ease-in-out;
     background: rgb(223, 148, 223);
+    cursor: pointer;
     
 }
 #submit-me:hover{
@@ -237,9 +257,10 @@ form{
 footer{
     background: rgb(95, 88, 88);
     text-align: center;
-    /* padding: 20px; */
+    padding: 1rem;
     color: white;
-    width: 100vw;
+    width: 100%;
+    /* display:none; */
 }
 .fas{
     width:100px ;
