--- a/stylesheet.css
+++ b/stylesheet.css
@@ -264,10 +264,10 @@ footer{
         width: 100px;
         height: auto;
 }
-/* } */
+}
 
 
-/* @media screen and (max-width: 900px) { */
+@media screen and (max-width: 900px) {
     #project-box{
         display: block;
         height: fit-content;
@@ -327,3 +327,37 @@ footer{
   }
   
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .navbar-toggle .toggle-button{
+      width: 30px;
+      height: 20px;
+      position: absolute;
+      top: 0.75rem;
+      right: 1rem;
+      display: none;
+      flex-direction: column;
+      justify-content: space-between; 
+  }
+
+  .toggle-button .bar{
+      height: 30px;
+      width: 100%;
+      background-color: white;
+  }
+  span{
+      margin: 3px;
+  } */
